[package]
name = "xmlex"
version = "0.1.0"
authors = ["White-Oak <lpzhelud@gmail.com>"]
edition = "2018"

[dependencies]
quick-xml = { version = "*", features = ["encoding"] }
percent-encoding = "*"

reqwest = { version = "0.10.0-alpha.2", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rust-crypto = "^0.2"
glob = "*"
zip = "*"

actix-web = "1.0"

bufstream = "*"
